@@ -16,25 +16,23 @@ Spigot Server is an open source Minecraft server.  It is one of the most popular
 - You have purchased Minecraft Java Edition and verified it works (https://www.minecraft.net)
 
 ## Versions used for this project
-- Spigot v1.13.2
-- Spigot API: 1.13.2-R0.1-SNAPSHOT
-- IntelliJ Community 2018.3
+- Spigot v1.14.2
+- IntelliJ Community 2019.1
 - Gradle v4.10
 - Java 8
 
-## How to get the Minecraft AWS plugin
+## How compile and use Minecraft AWS plugin
 
-### Option 1: Compile it yourself with IntelliJ
-1) Run: git clone  https://github.com/jaguth/spigotpluggin.awsmgr
-2) Open in IntelliJ Community. Verify gradle has downloaded all dependencies and project builds.
-3) Run the gradle task "shadowJar". The fat jar file will be built to build/libs.
+1. git clone  https://github.com/jaguth/spigotpluggin.awsmgr
+2. Run the gradle tasks:
+    * downloadBuildTools
+    * buildTheBuildTools
+    * installThePlugin
+3) Start the server: java -Xms512M -Xmx1G -XX:+UseConcMarkSweepGC -jar spigot-1.14.2.jar
 
 ### Option 2: Compile it yourself with Gradle
 1) Run: git clone  https://github.com/jaguth/spigotpluggin.awsmgr
 2) CD into spigotpluggin.awsmgr. Run: ./gradlew build shadowJar. The fat jar file will be built to build/libs.
-
-### Option 3: Just copy it from github
-1) Run: curl https://github.com/jaguth/spigotpluggin.awsmgr/tree/master/bin/spigotpluggin.awsmgr-1.0-all.jar --output spigotpluggin.awsmgr-1.0-all.jar
 
 ## Start you local Spigot server
 1) Copy spigotpluggin.awsmgr-1.0-all.jar to your Spigot plugin directory
